# okc

./: .cursorignore  .gitignore  NewDBSketch.md  README  README.md  docker-compose.yml  dump_ingest_state.json  pyproject.toml
Z_Reference/: High-level-plan.old.md  build-plan.md  structure.md
api/: Dockerfile  crud.py  db.py  embed.py  main.py  models.py  requirements.txt  schemas.py  text_utils.py
backend/api/: Dockerfile  config.py  crud.py  db.py  main.py  models.py
backend/db/: Spot-check.sql
backend/scripts/: dump_ingest.py  extract_claims.py  link_relations.py  merge_aliases.py  rebuild_entity_centroids.py  rebuild_topics.py  spot_check_claims.py  truncate_relation.py  wiki_crawler.py  wiki_crawler_adv.py
docs/: Architecture.md  Pipeline.md
frontend/: Dockerfile
frontend/src/: App.jsx
okc_api/: Dockerfile  __init__.py  crud.py  main.py  requirements.txt
okc_cli/: __init__.py  dump_ingest.py  fix_duplicate_entities.py  inspect_filter_matches.py  inspect_relations.py  wiki_crawler_adv.py
okc_core/: __init__.py  db.py  models.py  schemas.py
okc_pipeline/: __init__.py  pipeline.yaml  pipeline_runner.py
okc_pipeline/stage_00_embeddings/: doc_embeddings.py  embedder.py
okc_pipeline/stage_00_ingestion/: __init__.py  chunker.py  doc_filters.py  ingest_utils.py
okc_pipeline/stage_01_sentences/: __init__.py  sentence_splitter.py
okc_pipeline/stage_02_entities/: __init__.py  entity_extractor.py  entity_normalizer.py  (+3 more)
okc_ui/: index.html  package-lock.json  package.json
tests/: README.md  conftest.py  test_api.py  test_metrics.py  test_pipeline_e2e.py  test_stage_chunking.py  test_stage_claims.py  test_stage_entities.py  test_stage_relations.py  test_stage_sentences.py
(+38 files in other folders)
